<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_title_string">Welcome! Glad we could serve you.</string>
    <string name="welcome_user">Welcome, %s!</string>
    <string name="first_name_form">First Name*</string>
    <string name="last_name_form">Last Name*</string>
    <string name="email_optional_form">Email (Optional)</string>
    <string name="mobile_number_form">Mobile Number*</string>
    <string name="password_form">Password*</string>
    <string name="create_account_second_method">or continue with mobile number</string>
    <string name="create_account_primary_method">Create an account with</string>
    <string name="create_account_title">Thank you for choosing app name</string>
    <string name="user_details_subtitle">We need a few more details to finish your profile</string>
    <string name="date_of_birth_form">Date of birth*</string>
    <string name="gender_form">Gender*</string>
    <string name="submit_form">Submit</string>

    <string name="mobile_number_error_text_1">Please enter a valid phone number.</string>
    <string name="mobile_number_error_text_2">What\'s your phone number?</string>
    <string name="first_name_error_text">What\'s your first name?</string>
    <string name="last_name_error_text">What\'s your last name?</string>
    <string name="email_error_text">Please enter a valid email.</string>
    <string name="password_error_text_1">Please enter a password.</string>
    <string name="password_error_text_2">Enter at least 8 characters\nContains at least one digit\nContains one lower and upper case alphabet\nContains one special character: @#$%^&amp;!+= \nDoes not contain spaces</string>

</resources>
